Added c++ header for convenience, renamed namespace to subsection to avoid c++ conflicts, created c++ test file

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,8 +4,12 @@
 default: general_test
 
 general_test: general_test.c ../confparse.h
-	gcc general_test.c -o test -DDEBUG
+	gcc -Wall general_test.c -o test -DDEBUG
 	./test
+
+cpp_test: cpp_test.cpp ../confparse.h
+	g++ cpp_test.cpp -o cpp_test
+	./cpp_test
 
 clean:
 	rm -f test
